--- a/src/Components/UserModal/UserList.css
+++ b/src/Components/UserModal/UserList.css
@@ -29,6 +29,7 @@
 
 @media screen and (max-width: 768px){
     .user-list-section{
-        width: 70%;
+        width: 60%;
+        padding: var(--thin-card-padding);
     }
 }
